--- a/index.html
+++ b/index.html
@@ -250,12 +250,12 @@ th, buttom, table ,tr ,td{
 	}
     function lookupcampodata(data){
 		var formattedDate = new Date(data);
-	    	var min=formattedDate.getUTCMinutes();
+	    	var min=formattedDate.getMinutes();
 	    	if(min.length==1)
 		{
 		   min="0"+min;
 		}
-	    	var hr=formattedDate.getUTCHours();
+	    	var hr=formattedDate.getHours();
 	    	if(hr.length==1)
 		{
 		   hr="0"+hr;
