--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ th, buttom, table ,tr ,td{
 	</div>
 </header>
 <section id="principal">
-	<div class='row' style='margin-top:5%;margin-bottom:15%;'>
+	<div class='row' style='margin-top:5%;margin-bottom:5%;'>
 		<div class="container">
 			<div class="col-xs-12 col-sm-12 col-md-12" id='rowprincipal' style="display:none">
 				<h1 align="center">Listas de Tarefas</h1>
@@ -130,6 +130,15 @@ th, buttom, table ,tr ,td{
 				</div>
 				<table id="lista" style='margin-top:5%;' class="table table-hover">  
 				</table>
+			</div>
+		</div>
+	</div>
+</section>
+	<section id="duvidas">
+	<div class='row' style='margin-top:5%;margin-bottom:15%;'>
+		<div class="container">
+			<div class="col-xs-12 col-sm-12 col-md-12">
+				<h1 align="center">Dúvidas</h1>
 			</div>
 		</div>
 	</div>
