--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ th, buttom, table ,tr ,td{
 			</div>
 			<nav id="topnav" role="navigation" class="collapse navbar-collapse bs-navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">					
-					<li><a href="#">Dúvidas</a></li>
+					<li><a href="#duvidas">Dúvidas</a></li>
 					<li><a href="#" id="btnlogin" style="display:none; class="login-link">Entrar</a></li>
 					<li><a href="#" id="btnsair" style="display:none; class="logof-link">Sair</a></li>
 				</ul>
@@ -134,7 +134,7 @@ th, buttom, table ,tr ,td{
 		</div>
 	</div>
 </section>
-	<section id="duvidas">
+<section id="duvidas">
 	<div class='row' style='margin-top:5%;margin-bottom:15%;'>
 		<div class="container">
 			<div class="col-xs-12 col-sm-12 col-md-12">
