--- a/index.html
+++ b/index.html
@@ -139,6 +139,30 @@ th, buttom, table ,tr ,td{
 		<div class="container">
 			<div class="col-xs-12 col-sm-12 col-md-12">
 				<h1 align="center">Dúvidas</h1>
+				<p class="lead">Use o Lista de tarefas para gerenciar seu Google Tarefas. Basta clicar no botão ENTRAR e utilizar sua conta do Google para fazer login.</p>
+				<a href="https://github.com/danielcordeirorosa/To-do-list" target="_blank">Maiores informações</a>
+				<br>
+				<a href="https://support.google.com/mail/answer/106237" target="_blank">Dúvidas Google Task</a>
+			</div>
+		</div>
+	</div>
+</section>
+<section id="copyright" class="index-copyright">
+	<div class="container"> 
+		<!-- Social Media -->
+		<div class="row social-media animated" data-animation="fadeInUp" data-animation-delay="400">
+			<div class="col-md-12"> 
+				<!-- Icons --> 
+				<a href="https://github.com/danielcordeirorosa/To-do-list" target="_blank">GitHub</a>
+			</div>
+		</div>
+		<div class="row"> 
+			<div class="col-md-12 text-center" style="margin-top:9px">
+				<a href="terms.html">Terms</a> | <a href="privacy.html">Privacy Policy</a>
+			</div>
+			<!-- Copyright Title -->
+			<div class="col-md-12 text-center">
+				<p>Copyright 2017, Daniel Rosa.</p>
 			</div>
 		</div>
 	</div>
