--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@ th, buttom, table ,tr ,td{
 		</div>
 	</div>
 </section>
-<section id="duvidas">
+<hr>
+<section id="duvidas" style='margin-top:10%;margin-bottom:1%;'>
 	<div class='row' style='margin-top:5%;margin-bottom:15%;'>
 		<div class="container">
 			<div class="col-xs-12 col-sm-12 col-md-12">
